This is now the repository for the Server portion of Hanafuda.
This "update" features a "functional" socket connection and a prototype
for the final GUI.

--- a/Hanafuda/.project
+++ b/Hanafuda/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Hanafuda</name>
+	<name>Hanafuda Server</name>
 	<comment></comment>
 	<projects>
 	</projects>
